fixed reimport overflow bug

--- a/theme/up/style/course.css
+++ b/theme/up/style/course.css
@@ -198,5 +198,6 @@ height: 20px;
 	padding: 1px;
 }
 
-
-
+.no-overflow {
+	overflow: visible;
+}
